Fix sponsors image cutoff

--- a/client/views/sponsors/sponsors.import.less
+++ b/client/views/sponsors/sponsors.import.less
@@ -2,4 +2,5 @@
 	max-width: 400px;
 	margin: 0 auto;
  	padding-top: 50px;
+	width: 100%;
 }
